<?xml version="1.0"?>
<package>
  <name>robosys_ros</name>
  <version>0.1.0</version>
  <description>The robosys 2nd homework</description>

  <maintainer email="yuya.ushiro@gmail.com">SUZUKI yuya</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>message_generation</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
